[package]
name = "incarnate"
version = "0.2.7"
edition = "2021"
authors = ["Ethan Skowronski-Lutz <33399972+ethanmsl@users.noreply.github.com>"]
categories = ["cli", "utility", "app", "repo_generation", "template"]
description = "A CLI tool for generating a repository from a template."
documentation = ""
readme = "README.md"
homepage = ""
repository = ""
license = ""
default-run = "incarnate"

[dependencies]
clap = { version = "3.2.23", features = ["derive"] }
include_dir = "0.7.3"
struct-field-names-as-array = "0.1.4"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["tracing-log"] }
