[package]
name = "incarnate"
version = "0.2.9"
edition = "2021"
authors = ["Ethan Skowronski-Lutz <33399972+ethanmsl@users.noreply.github.com>"]
categories = ["cli", "utility", "app", "repo_generation", "template"]
description = "A CLI tool for generating a repository from a template."
documentation = ""
readme = "README.md"
homepage = ""
repository = "https://github.com/ethanmsl/incarnate"
license = ""
default-run = "incarnate"

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
clap = { version = "4.4.13", features = ["derive"] }
include_dir = "0.7.3"
liquid = "0.26.4"
struct-field-names-as-array = "0.3.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["tracing-log"] }
walkdir = "2.4.0"
